@@ -1,3 +1,6 @@
+2004-07-15 Hoda Amer
+	Fix for PR 68500: [Outline View] After doing a rename of a class, the outline viewer does not display the new name (just the old name)
+	
 2004-07-09 Hoda Amer
 	Fix for PR 69510 : [C++ Class Wizard] error message in C++ Class Wizard if invoke Class Wizard from existing C++ class in C/C++ Project View
 	
